Updated text of Conclusion

--- a/conclusion.qmd
+++ b/conclusion.qmd
@@ -50,11 +50,9 @@ Yet the line between interpretive choice and material limitation is rarely clean
 
 > Del flu[n]c Jordan ne pas la rive. puis me trovras $\begin{array}{c} \text{u vive} \\ \text{u morte} \end{array}$ (vv.1179-1180 in T-B)
 
-It is as though the scribe wanted to emphasize Mary’s simultaneous, ambiguous state as both alive and dead at once. Yes, it is possible this was merely a choice made for the sake of maintaining the spacing of the line — based on the end rhyme of this couplet, it is clear that “u vive” should follow “u morte” — but because this is the only instance in the entire copy where the scribe has stacked words in this way to compress a couplet into a line,^[In every other case where the T-B scribe is running out of space for a couplet in the line, the scribe simply continues writing straight into the outer margin, disrupting the copy’s otherwise neat format of both initial and final letter separation.] I see potential here to read this juxtaposition as intentional. It is possible that this small scribal gesture demonstrates a profound understanding of the Christian messaging embedded within this verse as Mary’s state of being is meaningfully paradoxical: while her earthly body may be bound for death down on Earth, her spiritual being is destined for eternal life up in heaven. Regardless of the scribe’s unknowable intentions, the editor is nevertheless left with the practical question of how best to share the fact of this scribal choice in such a way that informs without dictating interpretation. While digital editing methods may offer more options in how to render this copy — potentially even in a dynamic way with “u vive” bouncing between the outer margin and the interlinear space where it currently sits — this verse demands...  
+It is as though the scribe wanted to emphasize Mary’s simultaneous, ambiguous state as both alive and dead at once. Yes, it is possible this was merely a choice made for the sake of maintaining the spacing of the line — based on the end rhyme of this couplet, it is clear that “u vive” should follow “u morte” — but because this is the only instance in the entire copy where the scribe has stacked words in this way to compress a couplet into a line,^[In every other case where the T-B scribe is running out of space for a couplet in the line, the scribe simply continues writing straight into the outer margin, disrupting the copy’s otherwise neat format of both initial and final letter separation.] I see potential here to read this juxtaposition as intentional. It is possible that this small scribal gesture demonstrates a profound understanding of the Christian messaging embedded within this verse as Mary’s state of being is meaningfully paradoxical: while her earthly body may be bound for death down on Earth, her spiritual being is destined for eternal life up in heaven. Regardless of the scribe’s unknowable intentions, the editor is nevertheless left with the practical question of how best to share the fact of this scribal choice in such a way that informs without dictating.^[For the time being in Appendix 2, I have simply rendered “u vive” in line with “u morte,” placing square brackets around the two to signal something is amiss in this verse. Because copy T-B has not been digitized, including an image from the manuscript in this conclusion provides greater clarity.] While digital editing methods may offer more options in how to render this copy — potentially even in a dynamic way with “u vive” bouncing between the outer margin and the interlinear space where it currently sits — verses like this demand first and foremost the expertise and judgment of the human editor. The application of digital technologies does not automatically resolve such fascinating moments of tension to be discovered in the manuscript record — nor should it. 
 
-[EDITING THIS CONCLUSION STILL IN PROGRESS...]
+The challenges posed by the examples raised in this conclusion return us to the central concerns of this dissertation. The editing practice developed in this dissertation has been driven by questions like: How can manuscript copies be presented so that editorial choices remain transparent and foster readerly trust without detracting from a fluid and pleasurable reading experience? How can the interpretive potential of enhanced visualizations be maximized without overstepping the role of the editor? And how can readers be invited to make their own choices without eliminating the editor’s guiding hand altogether? Balancing these concerns requires continual calibration and recalibration. The shift from print to digital does not magically solve every challenge; rather, it transforms them. Working digitally does not totally free us from the physical limitations inherent in print media either — it merely reconfigures them. While digital editions are no longer bound by the dimensions of the codex, they introduce other limitations related to screen size — for instance, this digital edition has not been optimized for a mobile user, but should it be? — and the human capacity to focus on only one thing at a time remains an unavoidable issue in any medium. Such factors compel us to think carefully about the design and structure of editions, ensuring they remain both comprehensive and navigable without overwhelming the reader. The utility of any edition, however massive its scope, ultimately depends on the human reader’s ability and *desire* to engage with it. Although the digital edition presented here offers one viable approach to addressing these challenges, its greatest value may lie in its capacity to be extended and improved. Accordingly, this project has prioritized methods and tools that are open-access and require minimal technical expertise, so that future scholars — regardless of institutional resources may adapt, refine, and expand upon its foundations. In this way, the edition is less a terminal project than a platform for continued experimentation and collaboration within the field of digital medieval studies.
 
-The editing practice of this dissertation has been driven by questions like: How can manuscript copies be presented so that editorial choices are both transparent and enhance the reader’s trust, without detracting from a fluid and pleasurable reading experience? How can the benefits of enhanced visualizations be maximized without overstepping as editor? And how can readers be invited to make their own choices without totally removing the editor’s guiding hand? Balancing these questions requires an ongoing process of calibration and recalibration, and the shift from print to digital does not magically solve every challenge. Working digitally does not totally free us from the physical limitations inherent in traditional print media; rather, it transforms such practical constraints. While digital editions escape the binding dimensions of print, they introduce other limitations related to screen size — for instance, this digital edition has not been optimized for a mobile user, but should it be? — and the human capacity to focus on only one thing at a time remains an unavoidable issue in any medium. These sorts of factors compel us to consider how editions are structured, ensuring they remain comprehensive yet navigable without overwhelming the reader. Although it is possible to create an incredibly massive digital document, the actual utility of any edition is bound by the human end user's ability and desire to read it. And although my digital edition offers one viable approach to addressing these challenges, it is my hope that the methods described here will only encourage the production of future, improved iterations. To this end, in producing this digital edition, I have prioritized the use of methods and tools that are widely available with low barriers to entry for scholars without extensive digital resources or technical training, inviting others to continue the work of refining the processes of digital editing.
-
-All of this is a fruitful process, but an imperative for better editing outcomes, whether traditional print or digital editing, is increased transparency throughout as well as thoughtful and helpfully inventive visualizations. A great deal of work remains to be done to bring about a full edition and translation of the T corpus in its entirety, but in sharing the foundational stages of these efforts, I hope others may likewise see the value in rendering the complexities of our medieval texts both human- and machine-readable and in exposing the choices we make as editors to broader scrutiny along the way. The methods I propose exploring are not a cure-all for the inherent issue of mediation that occurs when a premodern text is represented to a modern audience in any format. However, I propose an editing practice that would give the modern reader more agency and clarity in their reading experience and bring the reader closer to the text in question as a body of texts, all the while acknowledging that bridging the gap between modern reader and premodern manuscript is an asymptotic endeavor. ....[EDITING THIS CONCLUSION STILL IN PROGRESS...]
+All of this is a fruitful process, but considerable work remains before a full digital edition and translation of the Version T corpus can be realized. By rendering the complexities of our medieval texts both human- and machine-readable, and by exposing the editorial decisions behind them to greater scrutiny, we move toward a more transparent and participatory model of scholarly editing. The approaches explored in this dissertation are not a cure-all for the fundamental problem of mediation that arises whenever a premodern text is represented to a modern audience. They are, rather, part of a longer continuum of editorial innovation — one that extends from the medieval scribe all the way to the waves of nineteenth and twentieth century medievalist editors and on to the present cohort of print and digital editors experimenting with new ways to understand and share old texts.^[The introduction to Chapter 2 provides a brief history of the editing of Old French texts and connects that history to digital editions currently in production like the *Old English Poetry in Facsimile (OEPF)* initiative. Chapter 1 situates the rise of the New Philology movement in context with the digital turn that has enabled many to reconceptualize medieval literature as inherently variant and plural.] My work joins a growing community of scholars who are confronting similar questions and seeking to rethink how digital tools might illuminate textual and material variance. The editing practice I propose builds upon this collective endeavor: it aims to grant modern readers greater clarity and control in their reading experience and bring the reader closer to the text in question as a body of texts, all the while acknowledging that bridging the gap between modern reader and premodern manuscript is, and will remain, an asymptotic endeavor. We may inch ever closer to the fullness of the T corpus, but no single, static edition could give full voice to a text as layered as the matrix that is Version T of La Vie de sainte Marie l’Égyptienne.
 
